# Cobalt

./: .gitignore  CMakeLists.txt  README.md  build.py
engine/: BSPCommon.hpp  BSPLoader.hpp
src/: main.cpp
src/platform/: SDLApp.hpp
src/renderer/: SoftwareRenderer.cpp  SoftwareRenderer.hpp
